# xDesignerProject

./: .gitignore  HANDOFF.md  LICENSE  README.md  xDesignerProject.code-workspace
.claude/: settings.local.json
comms-bench/: README.md  bench.py
comms-bench/firmware/bridge_echo/: CMakeLists.txt  CMakePresets.json  bridge_echo.c  tusb_config.h  usb_descriptors.c
comms-bench/firmware/smoke_nrf24/: CMakeLists.txt  smoke_nrf24.c
examples/: mars_rover.py  racing_car.py  racing_lap.py
examples/tracks/: _generate.py  figure8.toml
tests/: conftest.py  test_chassis_kinematics.py  test_dc_motor.py  test_diff_drive_mixer.py  test_lap_timer.py  test_pid.py  test_simulator.py  test_track.py
xDesigner/: __init__.py  block.py  simulator.py
xDesigner/blocks/: __init__.py  chassis.py  chassis2d.py  dc_motor.py  diff_drive_mixer.py  differential_chassis.py  encoder.py  lap_timer.py  motor_driver.py  path_follower.py  pid.py  power_meter.py  signal_source.py  steering.py  track.py
